--- a/queries.css
+++ b/queries.css
@@ -11,3 +11,228 @@
     font-size: 5.2rem;
   }
 }
+
+/*******************************************/
+/* BELOW 1200px (Landscape Tablets */
+/******************************************/
+
+@media (max-width: 75em) {
+  html {
+    /* 9px / 16px */
+    font-size: 56.25%;
+  }
+
+  .grid,
+  .cta {
+    column-gap: 4.8rem;
+    row-gap: 6.4rem;
+  }
+
+  .heading-primary {
+    font-size: 4.4rem;
+  }
+
+  .secondary-heading {
+    font-size: 3.6rem;
+  }
+
+  .tertiary-heading {
+    font-size: 1.8rem;
+  }
+
+  .cta-text {
+    font-size: 3.6rem;
+  }
+
+  .header {
+    padding: 0 3.2rem;
+  }
+
+  .main-nav-list li:not(:last-child) {
+    margin-right: 3.2rem;
+  }
+  .hero {
+    gap: 4.8rem;
+  }
+
+  .feature-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+
+  .feature-icon {
+    margin-bottom: 2.4rem;
+  }
+  .reasons li:first-child p {
+    margin-top: 2.4rem;
+  }
+
+  .reasons-heading {
+    margin-bottom: 2.4rem;
+  }
+
+  .hero-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .hero-email {
+    margin-bottom: 2.4rem;
+    width: 100%;
+  }
+  .attr-btn {
+    display: block;
+    width: 100%;
+  }
+  .form-btn {
+    width: 100%;
+  }
+}
+
+/*******************************************/
+/* BELOW 944px (Tablets */
+/******************************************/
+
+@media (max-width: 59em) {
+  html {
+    /* 8px / 16px */
+    font-size: 50%;
+  }
+
+  .hero {
+    grid-template-columns: 1fr;
+    padding: 6.4rem 8rem 0 8rem;
+    gap: 0;
+  }
+
+  .hero-form {
+    display: block;
+  }
+
+  .attr-btn {
+    display: inline-block;
+    width: initial;
+  }
+
+  .hero-email {
+    margin-bottom: 0;
+    width: initial;
+  }
+
+  .form-btn {
+    width: initial;
+  }
+  .hero-description,
+  .hero-image-box {
+    text-align: center;
+  }
+
+  .warning {
+    justify-content: center;
+  }
+
+  .hero-image {
+    width: 60%;
+  }
+
+  .hero-image-box::before {
+    padding-bottom: 50%;
+    width: 50%;
+  }
+
+  .pop-out-col-1 {
+    text-align: left;
+  }
+
+  .reasons-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .reasons {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+  }
+
+  .reasons li:first-child p {
+    margin-top: 0;
+  }
+
+  .reasons-heading {
+    margin-bottom: 4.8rem;
+  }
+  .reason {
+    width: 100%;
+    justify-content: flex-start;
+  }
+
+  .reasons li:not(:last-child) {
+    margin-bottom: 2.4rem;
+  }
+
+  /* MOBILE NAVIGATION */
+  .btn-mobile-nav {
+    display: block;
+    z-index: 1000;
+  }
+
+  .main-nav {
+    background-color: rgba(255, 255, 255, 0.89);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    transform: translate(100%, 0);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease-in;
+
+    /* HIDE NAVIGATION */
+    /* Allows NO transitions at all */
+    /* display: none; */
+
+    /* PROPER WAY OF HIDDING AN ELEMENT
+      WITHOUT USING "display:none;" */
+
+    /* 1) Hide the element visually  */
+    opacity: 0;
+
+    /* 2) Make it unaccessible to mouse and 
+     keyboard */
+    pointer-events: none;
+
+    /*  3) Hide it from screen readers  */
+    visibility: hidden;
+  }
+
+  .nav-open .main-nav {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translate(0);
+  }
+
+  .nav-open .icon-mobile-nav[name='close-outline'] {
+    display: block;
+  }
+  .nav-open .icon-mobile-nav[name='menu-outline'] {
+    display: none;
+  }
+  .main-nav-list {
+    flex-direction: column;
+    gap: 4.8rem;
+  }
+
+  .main-nav-list li:not(:last-child) {
+    margin-right: 0;
+  }
+}
