--- a/style.css
+++ b/style.css
@@ -61,7 +61,10 @@ a.btn-header {
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 4.8rem;
+}
+
+.main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
 }
 
 .main-nav-link:visited,
@@ -108,17 +111,44 @@ a.btn-header {
 .icon-mobile-nav {
   height: 4.8rem;
   width: 4.8rem;
-  color: #333;
+  color: #121212;
 }
 
 .icon-mobile-nav[name='close-outline'] {
   display: none;
 }
 
+/* STICKY NAVIGATION */
+.sticky.header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 6.4rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-image: linear-gradient(
+    90.11deg,
+    rgba(243, 244, 245, 0.102) 7.9%,
+    rgba(255, 255, 255, 0.4) 80.11%
+  );
+
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
+  /* 
+  background-color: rgb(255, 255, 255, 0.89); */
+  z-index: 9999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
+}
+
 /* HERO SECTION */
 .section-hero {
   background-color: #f3f4f5;
-  padding-bottom: 9.6rem;
+  padding-bottom: 6.4rem;
 }
 
 .hero {
@@ -207,6 +237,7 @@ a.btn-header {
 }
 
 .hero-image {
+  width: 90%;
   z-index: 2;
 }
 
@@ -220,12 +251,12 @@ a.btn-header {
 
 .img-pop-out--1 {
   z-index: 3;
-  transform: translateX(-70%);
+  transform: translate(-55%, -15%);
 }
 
 .img-pop-out--2 {
   z-index: 3;
-  transform: translate(-50%, 140%);
+  transform: translate(-35%, 110%);
 }
 
 .pop-out-comp {
@@ -276,9 +307,30 @@ a.btn-header {
   text-align: right;
 }
 
+.warning {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 1.6rem;
+
+  color: red;
+}
+
+.warning-icon {
+  font-size: 2.4rem;
+  margin-right: 1.2rem;
+}
+
+.warning .warning-text {
+  font-size: 1.8rem;
+  color: red;
+}
+
 /* SECTION FEATURES */
 .section-features {
   background-color: #f3f4f5;
+  padding-top: 6.4rem;
+
   padding-bottom: 9.6rem;
 }
 
@@ -291,13 +343,14 @@ a.btn-header {
   padding: 4.044rem 3.74rem 1.81rem 2.527rem;
 }
 .feature-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   background: #f3f4f5;
   box-shadow: 0 0.404375rem 1.6175rem rgba(0, 0, 0, 0.15);
   border-radius: 10.1094px;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
   /* gap: 3.033rem; */
   transition: all 0.4s;
 }
@@ -391,7 +444,11 @@ a.btn-header {
   font-size: 4.4rem;
   line-height: 1.25;
 
-  margin-bottom: 4.8rem;
+  margin-bottom: 3.2rem;
+}
+
+.btn-cta {
+  display: inline-block;
 }
 
 /* FOOTER */
@@ -411,4 +468,126 @@ a.btn-header {
   line-height: 1.8rem;
 
   color: #ffffff;
+}
+
+/* MODAL WINDOW */
+
+.overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: rgba(9, 9, 9, 0.863);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 5;
+
+  padding: 0 8rem;
+}
+
+.modal-tittle-header {
+  display: flex;
+  align-items: center;
+
+  justify-content: space-between;
+  margin-bottom: 0.8rem;
+  padding: 2.4rem 0 0 3.2rem;
+}
+
+.modal-tittle-box {
+  display: flex;
+  align-items: center;
+}
+
+.modal-icon {
+  font-size: 2.4rem;
+  background-color: lightgreen;
+  color: #fff;
+  border-radius: 50%;
+  margin-right: 1.2rem;
+}
+.modal-heading {
+  font-family: bod;
+  font-size: 2.4rem;
+  font-style: normal;
+  font-weight: 600;
+}
+
+.close-modal {
+  font-size: 3.6rem;
+  color: #aaa;
+  cursor: pointer;
+  border: none;
+  background: none;
+
+  transform: translate(-60%, -40%);
+}
+
+.modal p {
+  font-family: mid;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.4rem;
+  color: rgba(18, 18, 18, 0.6);
+  /* margin-bottom: 1.6rem; */
+}
+
+.modal-container {
+  padding: 0 8rem 3.2rem 3.2rem;
+}
+
+.modal-thanks-box {
+  background-color: rgba(170, 170, 170, 0.064);
+  padding: 1.6rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.modal-thanks-box button {
+  border-radius: 5px;
+  transition: all 0.3s;
+  background: #7118c4;
+  border: none;
+  color: #ffffff;
+  /* border: none; */
+  text-decoration: none;
+  padding: 0.8rem 1.6rem;
+
+  font-family: mid;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 29px;
+}
+
+.modal-thanks-box button:active,
+.modal-thanks-box button:hover {
+  background: #3a0e62;
+  color: #e3d2f3;
+}
+
+.modal {
+  background-color: #fff;
+  border-radius: 5px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-btn {
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.no-vert-scroll {
+  overflow-y: hidden;
+  /* pointer-events: none; */
+  height: 100vh;
 }
