--- a/style.css
+++ b/style.css
@@ -506,10 +506,17 @@ a.btn-header {
 
 .modal-icon {
   font-size: 2.4rem;
-  background-color: lightgreen;
   color: #fff;
   border-radius: 50%;
   margin-right: 1.2rem;
+  padding: 0.2rem;
+}
+
+.modal-icon[name='backspace-outline'] {
+  background-color: red;
+}
+.modal-icon[name='checkmark-outline'] {
+  background-color: lightgreen;
 }
 .modal-heading {
   font-family: bod;
