--- a/queries.css
+++ b/queries.css
@@ -395,4 +395,13 @@
   .modal p {
     line-height: 1.4;
   }
+
+  .hero-image {
+    margin-top: -3rem;
+    z-index: 1;
+  }
+
+  .hero-image-box {
+    overflow: hidden;
+  }
 }
