--- a/style.css
+++ b/style.css
@@ -545,7 +545,7 @@ a.btn-header {
 }
 
 .modal-container {
-  padding: 0 8rem 3.2rem 3.2rem;
+  padding: 0 40rem 3.2rem 3.2rem;
 }
 
 .modal-thanks-box {
@@ -554,7 +554,7 @@ a.btn-header {
 
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .modal-thanks-box button {
