--- a/queries.css
+++ b/queries.css
@@ -328,7 +328,7 @@
   }
 
   .section-hero {
-    padding: 2.4rem 0 6.4rem 0;
+    padding: 0 0 6.4rem 0;
   }
 
   .hero-image {
@@ -346,12 +346,40 @@
   }
 
   .primary-heading {
-    font-size: 5.2rem;
+    /* font-size: 5.2rem; */
+    margin-top: 6.4rem;
+    font-size: 44.64px;
+    line-height: 58px;
+    margin-bottom: 1.6rem;
+  }
+
+  .hero-text {
+    font-size: 18.0591px;
+    line-height: 21px;
+    margin-bottom: 2.4rem;
+  }
+
+  .hero-email {
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
+    margin-bottom: 1.6rem;
+
+    font-size: 12.96px;
+    line-height: 21px;
+    color: #121212;
   }
 
   .hero-image-box::before {
     padding-bottom: 70%;
     width: 70%;
+  }
+
+  .form-btn {
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
+
+    font-size: 12.96px;
+    line-height: 21px;
   }
 
   .img-pop-out--1,
@@ -394,21 +422,5 @@
 
   .modal p {
     line-height: 1.4;
-  }
-
-  .hero-image {
-    margin-top: -8rem;
-    z-index: 1;
-    width: 100%;
-  }
-
-  .hero-image-box {
-    overflow: hidden;
-  }
-
-  .hero-image-box::before {
-    padding-bottom: 85%;
-    width: 85%;
-    transform: translate(-48%, -60%);
   }
 }
