--- a/queries.css
+++ b/queries.css
@@ -328,7 +328,7 @@
   }
 
   .section-hero {
-    padding: 2.4 0 6.4rem 0;
+    padding: 0 0 6.4rem 0;
   }
 
   .hero-image {
@@ -355,7 +355,7 @@
 
   .hero-text {
     font-size: 1.80591rem;
-    /* line-height: 21px; */
+    line-height: 21px;
     margin-bottom: 2.4rem;
   }
 
